# rust_autogpt

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
auto_gippity/: Cargo.toml  Makefile.toml
auto_gippity/src/: main.rs
auto_gippity/src/ai_functions/: aifunc_architect.rs  aifunc_backend.rs  aifunc_frontend.rs  aifunc_managing.rs  mod.rs
auto_gippity/src/apis/: call_request.rs  mod.rs
auto_gippity/src/helpers/: command_line.rs  general.rs  mod.rs
auto_gippity/src/models/general/: llm.rs  mod.rs
proc_macro/tests/: integration_test.rs
rest_client/: Create Task.bru  bruno.json  create_task.bru  delete_task.bru  get_all_task.bru  get_task.bru  task_create.bru  task_delete.bru  task_get.bru  task_get_all.bru  task_update.bru  update_task.bru  user_login.bru  user_register.bru
web_template/: Cargo.toml
web_template/src/: main.rs
